--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "publish": "git add -A && git commit -m 'new' && git push vps master && git push origin master"
+    "publish": "git add -A && git commit -m 'new' && git push vps master"
   },
   "author": "",
   "license": "ISC"
